--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,110 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-image: linear-gradient(to right, #00c6ff, #0072ff);
-    color: #ffffff;
+    color: #fff;
     text-align: center;
     padding-top: 30px;
 }
 
-#task-container{
+#tasks-container{
     width: 500px;
     margin-left: auto;
     margin-right: auto;
 }
 
-#task-header{
-    
+#tasks-header{
+    margin-top: 40px;
+}
+
+#add-task-form{
+    display: flex;
+    align-items: center;
+    gap: 0;
+}
+
+#add-task-form input{
+    box-sizing: border-box;
+    border: 1px solid #ac79b3;
+    background-color: #FFF;
+    color: #34073D;
+    padding: 15px;
+    font-size: 18px;
+    flex: 1;
+    width: auto;
+    border-radius: 8px 0 0 8px; /* Adicionado border-radius à esquerda */
+}
+
+#add-task-form input::placeholder{
+    color: #34073D;
+}
+#add-task-form input:focus{
+    outline: none;
+    border-color: #ac79b3;
+}
+
+#add-btn{
+    position: static;
+    background: #FFF;
+    border: 1px solid #ac79b3;
+    cursor: pointer;
+    transition: .3s;
+    width: 60px;
+    height: 53px;
+    margin: 0;
+    border-radius: 0px 8px 8px 0px; /* Adicionado border-radius à direita */
+}
+#add-btn:hover{
+    background: #ac79b3;
+    color: #FFF;
+}
+
+ion-icon{
+    font-size: 30px;
+}
+
+/* Task List Styles */
+#task-list{
+    list-style: none;
+    padding-left: 0;
+}
+
+#task-list li{
+    text-align: left;
+    height: 50px;
+    line-height: 50px;
+    position: relative;
+    border-bottom: 3px solid #34073d7a;
+    background-color: #FFF;
+    color: black;
+    margin-bottom: 10px;
+    padding-left: 15px;
+    transition: .3s;
+    font-weight: bold;
+    border-radius: 8px; /* Adicionado border-radius nos itens da lista */
+}
+
+#task-list ion-icon{
+    position: absolute;
+    top: 0%;
+    height: 40px;
+    transition: .5s;
+    cursor: pointer;
+    width: 30px;
+    padding: 5px;
+}
+
+.checkmark-btn{
+    right: 40px;
+}
+.checkmark-btn:hover{
+    background-color: #00c6ff;
+    color: #FFF;
+}
+
+.close-btn{
+    right: 0px;
+}
+.close-btn:hover{
+    background-color: #ff4d4d;
+    color: #FFF;
 }
